fix time_shift form btns

--- a/app/assets/stylesheets/time-shifts.sass
+++ b/app/assets/stylesheets/time-shifts.sass
@@ -26,3 +26,5 @@
   @extend .col-sm-offset-4
   @extend .col-md-offset-2
   @extend .col-xs-12
+  padding-left: 0
+
